; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nilfs2/extr_cpfile.c_nilfs_cpfile_get_cpinfo.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nilfs2/extr_cpfile.c_nilfs_cpfile_get_cpinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nilfs_cpfile_get_cpinfo(%struct.inode* %0, i32* %1, i32 %2, i8* %3, i32 %4, i64 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.inode*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  store %struct.inode* %0, %struct.inode** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i8* %3, i8** %11, align 8
  store i32 %4, i32* %12, align 4
  store i64 %5, i64* %13, align 8
  %14 = load i32, i32* %10, align 4
  switch i32 %14, label %29 [
    i32 129, label %15
    i32 128, label %22
  ]

15:                                               ; preds = %6
  %16 = load %struct.inode*, %struct.inode** %8, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = load i8*, i8** %11, align 8
  %19 = load i32, i32* %12, align 4
  %20 = load i64, i64* %13, align 8
  %21 = call i32 @nilfs_cpfile_do_get_cpinfo(%struct.inode* %16, i32* %17, i8* %18, i32 %19, i64 %20)
  store i32 %21, i32* %7, align 4
  br label %32

22:                                               ; preds = %6
  %23 = load %struct.inode*, %struct.inode** %8, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = load i8*, i8** %11, align 8
  %26 = load i32, i32* %12, align 4
  %27 = load i64, i64* %13, align 8
  %28 = call i32 @nilfs_cpfile_do_get_ssinfo(%struct.inode* %23, i32* %24, i8* %25, i32 %26, i64 %27)
  store i32 %28, i32* %7, align 4
  br label %32

29:                                               ; preds = %6
  %30 = load i32, i32* @EINVAL, align 4
  %31 = sub nsw i32 0, %30
  store i32 %31, i32* %7, align 4
  br label %32

32:                                               ; preds = %29, %22, %15
  %33 = load i32, i32* %7, align 4
  ret i32 %33
}

declare dso_local i32 @nilfs_cpfile_do_get_cpinfo(%struct.inode*, i32*, i8*, i32, i64) #1

declare dso_local i32 @nilfs_cpfile_do_get_ssinfo(%struct.inode*, i32*, i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
